// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox should show minimo value 1`] = `
<div
  className="ParceladoBox__ProductComplement-s1lix42y-0 kmsNiN"
>
  ou 
  3
  x de
  <span
    className="Product__ProductCurrency-s1tvs15m-3 dNglJO"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1tvs15m-4 grKfvO"
  >
    4
  </span>
  <strong>
    sem juros
  </strong>
</div>
`;

exports[`Test File ProductBox should show value parcel 1`] = `
<div
  className="ParceladoBox__ProductComplement-s1lix42y-0 kmsNiN"
>
  ou 
  3
  x de
  <span
    className="Product__ProductCurrency-s1tvs15m-3 dNglJO"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1tvs15m-4 grKfvO"
  >
    35,01
  </span>
  <strong>
    sem juros
  </strong>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 1`] = `
<div
  className="ParceladoBox__ProductComplement-s1lix42y-0 kmsNiN"
>
  ou 
  2
  x de
  <span
    className="Product__ProductCurrency-s1tvs15m-3 dNglJO"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1tvs15m-4 grKfvO"
  >
    5,00
  </span>
  <strong>
    sem juros
  </strong>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 2`] = `
<div
  className="ParceladoBox__ProductComplement-s1lix42y-0 kmsNiN"
>
  ou 
  1
  x de
  <span
    className="Product__ProductCurrency-s1tvs15m-3 dNglJO"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1tvs15m-4 grKfvO"
  >
    4,00
  </span>
  <strong>
    sem juros
  </strong>
</div>
`;
